# uwb-imu-fusion

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
config/: calibration.txt  slam.yaml  trajectory.txt  uwb_fgo_viz.rviz  vicon_test.yaml
data/: anchor_pose.yaml
doc/: 00-overview.md  01-awesome-uwb-localization.md  02-SFUISE.md  03-uwb-imu-positioning.md  CODE_DOCUMENTATION.md  dev.tex
include/uifgo/: config.h  data_loader.h  graph_builder.h  imu_preint.h  initializer.h  logger.h  optimizer.h  outlier_filter.h  trajectory_io.h  types.h  uwb_factor.h  visualizer.h
launch/: offline.launch  offline_with_viz.launch
src/: chi2.cpp  config.cpp  data_loader.cpp  graph_builder.cpp  imu_preint.cpp  imu_sync.cpp  initializer.cpp  logger.cpp  optimizer.cpp  outlier_filter.cpp  trajectory_io.cpp  uwb_factor.cpp  visualizer.cpp
test/: test_config.cpp  test_graph_builder.cpp  test_imu_preint.cpp  test_optimizer.cpp  test_outlier.cpp  test_trilaterate.cpp  test_uwb_factor.cpp
tools/: analyze_log.py  run_offline.cpp
